ocfweb/static/scss/pages/home.scss
@import '../ocf';

.page-home {
    .ocf-status-list {
        @media (min-width: 1200px) {
            margin-right: 310px;
        }

        @media (min-width: 992px) and (max-width: 1199px) {
            margin-right: 280px;
        }
    }

    .ocf-hours {
        font-size: 14px;
        margin: 5px 15px;

        .ocf-hour {
            border-bottom: solid 1px #ccc;
            padding: 10px;

            &.odd {
                background-color: #f5f5f5;
            }

            .ocf-hour-title {
                padding: 0 5px;
                font-weight: bold;
            }

            .ocf-hour-hours {
                padding: 0 5px;
            }
        }
    }

    .more-hours {
        font-size: 14px;
    }

    .ocf-staffhours {
        p {
            margin: 0;
        }

        h3 {
            margin-bottom: 0;
        }

        .cancelled p {
            color: #999;
        }

        .cancelled-text {
            color: #b20000;
            font-weight: bold;
        }

        .ocf-staffhours-faces {
            @extend .list-inline;

            // squeeze closer on phones to try to fit them on a single line
            @media (max-width: 767px) {
                li {
                    padding: 0;
                }
            }
        }

        .cancelled .ocf-staffhours-faces {
            opacity: 0.6;
        }
    }

    .ocf-penguin-swing {
        position: absolute;

        height: 407px;

        left: 50%;
        right: 0;
        top: -95px;

        background-image: url('../img/penguin-swing.svg');
        background-repeat: no-repeat;
        background-size: 366px 407px;

        // responsive penguin ftw
        @media (min-width: 1200px) {
            background-position: 240px 0;
        }

        @media (min-width: 992px) and (max-width: 1199px) {
            background-position: 178px 0;
            top: -60px; // pull down a little to cover status bar
        }

        @media (min-width: 768px) and (max-width: 991px) {
            background-position: 122px 0;
        }

        @media (max-width: 767px) {
            display: none;
        }
    }

    .ocf-status-bar .container {
        @media (min-width: 768px) {
            padding-right: 316px;
        }
    }

    .ocf-hero {
        padding-top: 10px;
        padding-bottom: 0;

        font-size: 16px;

        h1 {
            @media (max-width: 767px) {
                font-size: 28px;
                font-weight: 800;
            }

            @media (min-width: 992px) {
                font-size: 40px;
            }

            // we want the text to wrap after 'Open'
            @media (min-width: 992px) and (max-width: 1199px) {
                padding-right: 46px;
            }
        }

        .ocf-button-holder {
            padding-bottom: 15px;

            .btn {
                background-color: $hero-button-color;
                margin-right: 10px;
                color: #000;

                // help fit both buttons on one line on iPhone
                @media (max-width: 767px) {
                    margin-right: 5px;
                }

                &:hover {
                    background-color: $hero-button-color-hover;
                }
            }
        }
    }
}

